--- a/index.html
+++ b/index.html
@@ -13,11 +13,21 @@
 
 <body>
     <main class="homepage">
+        <!--
+            Seccion principal:
+            1. header.
+            2. slider.
+            3. headline
+        -->
         <section class="homepage--main-container">
+            <!--Main header-->
             <header class="main-header">
                 <span class="main-header--location">Portland, Maine</span>
                 <img src="dist/img/Logo.png" alt="Brand logo" title="Brand logo" class="brand-logo" />
             </header>
+            <!--Fin-->
+
+            <!--Main slider-->
             <div class="main-slider--wrapper">
                 <div class="main-slider--container owl-carousel">
                     <picture class="main-slider--item">
@@ -42,7 +52,9 @@
                 </div>
                 <div class="main-slider--nav"></div>
             </div>
+            <!--Fin-->
 
+            <!--Headline-->
             <div class="main-headline">
                 <h2 class="headline-title">
                     History in the making.
@@ -56,8 +68,12 @@
                     donec luctus vel, augue duis. Voluptas turpis, non vehicula sit turpis varius non ante, inventore consectetur. Donec luctus vel eu, augue non. Non vehicle sit turpis varius non ante, inventore consec.
                 </p>
             </div>
+            <!--Fin-->
         </section>
+        <!--Fin-->
 
+
+        <!--Sección "Stay"-->
         <section class="homepage-stay">
             <div class="stay-room">
                 <picture class="stay-room--image">
@@ -76,7 +92,9 @@
                 </div>
             </div>
         </section>
+        <!--Fin-->
 
+         <!--Sección "Events"-->
         <section class="homepage-events">
             <div class="homepage-events--wrapper">
                 <h2 class="homepage-events--title">
@@ -129,7 +147,9 @@
                 </div>
             </div>
         </section>
+        <!--Fin-->
 
+        <!--Sección "Book now"-->
         <section class="book-now--mask">
             <div class="book-now">
                 <div class="book-now--marker">Book Now</div>
@@ -180,7 +200,9 @@
                 </form>
             </div>
         </section>
+        <!--Fin-->
 
+        <!--Sección footer-->
         <footer class="homepage-footer">
             <div class="homepage-footer--wrapper">
                 <span>
@@ -192,6 +214,7 @@
                 </span>
             </div>
         </footer>
+        <!--Fin-->
     </main>
 </body>
 <script src="dist/vendor/jquery-3.6.0.slim.js"></script>
